Fix validation issue in app.conf

--- a/SplunkforCiscoUmbrella/default/app.conf
+++ b/SplunkforCiscoUmbrella/default/app.conf
@@ -9,6 +9,9 @@ is_configured = 0
 is_visible = 1
 label = Cisco Umbrella
 
+[package]
+check_for_updates = 0
+
 [launcher]
 author = Brendan Dalpe (brendan.dalpe@criticalstart.com)
 description = The Cisco Umbrella App for Splunk provides dashboards and reports for insight into Cisco Umbrella DNS logs for your organization.
