Only run AppInspect on changes to app folder or PR

--- a/.github/workflows/appinspect.yml
+++ b/.github/workflows/appinspect.yml
@@ -1,6 +1,10 @@
 name: Splunk AppInspect
 
-on: [push, pull_request]
+on:
+  push:
+    paths:
+      - 'SplunkforCiscoUmbrella/**'
+  pull_request:
 
 jobs:
   appinspect:
