--- a/SplunkforCiscoUmbrella/default/app.conf
+++ b/SplunkforCiscoUmbrella/default/app.conf
@@ -13,6 +13,6 @@ label = Cisco Umbrella
 check_for_updates = 0
 
 [launcher]
-author = Brendan Dalpe (brendan.dalpe@criticalstart.com)
+author = Brendan Dalpe (bdalpe@gmail.com)
 description = The Cisco Umbrella App for Splunk provides dashboards and reports for insight into Cisco Umbrella DNS logs for your organization.
-version = 1.0.1
+version = 1.0.2
